[package]
name = "gc-shadowstack"
version = "1.0.0"
authors = ["Adel Prokurov <gtashnik11@gmail.com>"]
edition = "2018"
description = "Shadow stack algorithm implementation for GC object rooting"
repository = "https://github.com/playXE/gc-shadowstack"
readme = "README.md"
keywords = ["gc", "shadowstack", "rooting"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa = "0.2.2"
paste = "1.0.5"
